--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,11 +1,16 @@
 .page__content {
-    margin-top: 92px;
+    margin-top: 56px;
     margin-bottom: 92px;
 }
 
+@media screen and (max-width: 1124px) {
+    .page__content {
+       margin-top: 48px;
+    }  
+} 
+
 @media screen and (max-width: 984px) {
     .page__content {
-       margin-top: 90px;
        margin-bottom: 88px;
     }  
 } 
@@ -13,8 +18,7 @@
 
 @media screen and (max-width: 568px) {
     .page__content {
-       margin-top: 66px;
-       margin-bottom: 64px;
+        margin-bottom: 64px;
     }  
 }
 
