--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,11 +1,13 @@
 .page {
+    font-family:'inter', Arial, sans-serif;
     background-color: #2A2C2F;
     color: #FFFFFF;
     min-width: 320px;
     max-width: 1280px;
-    /*min-height: 100vh;*/
-    /*display: flex;*/
-    flex-direction: column;
     margin: 0 auto;
+    /*min-height: 100vh;*/
+    display: flex;
+    flex-direction: column;
+    
     /*padding: 28px 0 24px;*/
 }
