--- a/pages/index.css
+++ b/pages/index.css
@@ -14,3 +14,7 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/__links.css);
+@import url(../blocks/footer/__link/__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
