--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -16,7 +16,7 @@
   
   @media screen and (max-width: 568px) {
     .intro__title {
-      min-width: 288px;
+      max-width: 288px;
       font-size: 32px;
       line-height: 35px;
     } 
