--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -19,7 +19,7 @@
   
   @media screen and (max-width: 568px) {
     .intro {
-      min-width: 288px;
+      max-width: 288px;
       padding: 0 16px;
     }
   }
