--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,15 +10,15 @@
     padding: 0;
   }
   
-  @media screen and (min-width: 984px) {
+  @media screen and (max-width: 984px) {
     .lead__caption {
-      padding: 24px 0 0 0;
+      padding: 0 0 0 24px;
     }
   }
   
   @media screen and (max-width: 568px) {
     .lead__caption {
-      padding: 16px 0 0 0;
+      padding: 0 0 0 16px;
     }
   }
   
