--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,9 +9,9 @@
 
 @media screen and (max-width: 568px) {
   .cover__subtitle {
-      font-size: 14px;
-      line-height: 16px;
-      margin: 8 0 0px;
-      max-width: 288px;
-  }  
+    font-size: 14px;
+    line-height: 16px;
+    margin: 8px 0 0;
+    max-width: 288px;
+  }
 }
