--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,9 +9,9 @@
 
 @media screen and (max-width: 568px) {
   .cover__title {
-      font-size: 32px;
-      line-height: 35px;
-      margin: 0 0 8px;
-      max-width: 288px;
-  }  
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 0 8px;
+    min-width: 288px;
+  }
 }
