--- a/blocks/footer/__link/__link.css
+++ b/blocks/footer/__link/__link.css
@@ -1,26 +1,27 @@
 .footer__link {
-    color: #FFFFFF;
-    width: 100%;
-    text-decoration: none;
-    transition: 0.4s;
-    margin: 0 18px 0 0;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
+  color: #FFFFFF;
+  width: 100%;
+  text-decoration: none;
+  transition: 0.4s;
+  /*margin: 0 18px 0 0;*/
+  margin: 0 15px 0 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .footer__link:nth-of-type(5) {
-    margin: 0;
+  margin: 0;
 }
 
 .footer__link:hover {
-    opacity: 0.6;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 568px) {
-    .footer__link {
-        margin-bottom: 32px;
-        font-size: 24px;
-        line-height: 24px;
-    }   
+  .footer__link {
+    margin: 0 0 32px 0;
+    font-size: 24px;
+    line-height: 24px;
+  }   
 }
