--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,29 +1,28 @@
 .header {
-    max-width: 1184px;
-    padding-top: 28px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin: 0 auto;
-    width: 100%;
+  font-family:'inter', Arial, sans-serif;
+  max-width: 1184px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 0 auto;
+  width: 100%;
 }
 
 @media screen and (max-width: 1124px) {
-    .header {
-        max-width: 928px;
-    }
+  .header {
+    max-width: 928px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .header {
-        max-width: 720px;
-    }
+  .header {
+    max-width: 720px;
+  }
 }
 
 @media screen and (max-width: 568px) {
-    .header {
-        max-width: 288px;
-        padding-top: 16px;
-    }   
+  .header {
+    max-width: 288px;
+  }   
 }
