--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,30 +1,27 @@
 .lead {
-    max-width: 984px;
-    margin: 0 auto;
-    padding: 56px 0 92px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+  font-family:'inter', Arial, sans-serif;
+  max-width: 984px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 @media screen and (max-width: 1124px) {
-    .lead {
-        max-width: 928px;
-        padding-top: 48px;
-    }
+  .lead {
+    max-width: 928px;
+  }
 }
 
 @media screen and (max-width: 984px) {
-    .lead {
-        max-width: 768px;
-        padding-bottom: 88px;
-    }
+  .lead {
+    max-width: 768px;
+  }
 }
 
 @media screen and (max-width: 568px) {
-    .lead {
-        max-width: 320px;
-        padding-bottom: 64px;
-    }   
+  .lead {
+    max-width: 320px;
+  }   
 }
