--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,13 +1,25 @@
 .page {
-    font-family:'inter', Arial, sans-serif;
-    background-color: #2A2C2F;
-    color: #FFFFFF;
-    min-width: 320px;
-    max-width: 1280px;
-    margin: 0 auto;
-    /*min-height: 100vh;*/
-    display: flex;
-    flex-direction: column;
-    
-    /*padding: 28px 0 24px;*/
+  font-family:'inter', Arial, sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  background-color: #2A2C2F;
+  color: #FFFFFF;
+  min-width: 320px;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 28px 0 24px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 568px) {
+  .page {
+    padding: 16px 0 24px;
+  }
 }
