--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -14,6 +14,8 @@
   background-size: cover;
   position: relative;
   z-index: 1;
+  width: 100%;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1124px) {
@@ -31,6 +33,7 @@
 @media screen and (max-width: 568px) {
   .cover__item {
     min-height: 200px;
+    max-width: 320px;
   }  
 }
 
