--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,15 +1,18 @@
 .footer__links {
   box-sizing: content-box;
+  display: flex;
+  gap: 18px;
+  margin: 0;
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 667px) {
   .footer__links {
     margin-bottom: 48px;
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     text-align: start;
+    gap: 32px;
   }
 }
 
