--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,24 +3,23 @@
   max-width: 984px;
   margin: 0 auto;
   width: 100%;
+  padding: 0;
 }
 
 @media screen and (max-width: 1124px) {
   .intro {
-    padding: 0 0 0 48px;
+    max-width: 928px;
   }
 }
   
 @media screen and (max-width: 984px) {
   .intro {
     max-width: 720px;
-    padding: 0 24px;
   }  
 }
   
 @media screen and (max-width: 568px) {
   .intro {
     max-width: 288px;
-    padding: 0 16px;
   }
 }
