--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .lead__title {
+    font-size: 12vw;
+  }
+}
+
 @media screen and (max-width: 568px) {
   .lead__title {
     max-width: 288px;
